fixed flex wrap

--- a/css/styles.css
+++ b/css/styles.css
@@ -37,15 +37,25 @@ li {
 .flex-container {
 	display: flex;
 	flex-direction: row;
+	justify-content: space-evenly;
 	
   }
+.col {
+	padding: 1em;
 
+}
 
 
 /*  Media Queries  */
 
-@media (min-width: 769px) {
+@media (max-width: 769px) {
+	.flex-container {
+		flex-flow: wrap;
 
+	}
+
+}
 
 
 @media (min-width: 1025px) {
+}
